implemented gross validation
